# grok

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CTestConfig.cmake  Cargo.toml  INSTALL  INSTALL.md  LICENSE  README.md  TESTING.md  appveyor.yml  astyle.cfg  cppcheck.sh  format.sh  grok.code-workspace
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/codec/: Cargo.toml  build.rs
bindings/rust/codec/src/: lib.rs
bindings/rust/examples/: initialize_grok.rs
bindings/rust/src/: errors.rs  lib.rs
bindings/rust/tests/: integration_tests.rs
bindings/swig/: CMakeLists.txt  README.md  grok_codec.i.in  grok_codec_csharp.i.in  grok_codec_java.i.in  grok_core.i.in  grok_core_csharp.i.in  grok_core_java.i.in
bindings/swig/csharp/: GrokCore.csproj
doc/: 16BitDWT.md  CMakeLists.txt  Cinema4K_POC.md  Doxyfile.dox.cmake.in  IncrementalStripeCompositing.md  S3.md  TileCache.md  mainpage.dox.in  test.txt
doc/man/: README.md
doc/man/man1/: grk_compress.1  grk_decompress.1  grk_dump.1  opj_compress.1  opj_decompress.1  opj_dump.1
doc/man/man3/: libgrok.3  libgrokj2k.3
doc/man/md/man1/: grk_compress.1.md  grk_decompress.1.md  grk_dump.1.md  grk_transcode.1.md
examples/: CMakeLists.txt
examples/codec/: CMakeLists.txt  arg_converter.h  codec_compress.cpp  codec_compress_from_tiff_to_buf.cpp  codec_compress_from_tiff_to_file.cpp  codec_decompress_from_file.cpp  codec_decompress_from_file_to_tiff.cpp
examples/core/: CMakeLists.txt  core.h  core_compress.cpp  core_compress_decompress.cpp  core_decompress.cpp  core_decompress.py  core_decompress_async.cpp  core_decompress_from_buf.cpp  core_decompress_from_file.cpp  core_simple.cpp
mercury/: .gitignore  Cargo.toml  README.md  build.rs
mercury/docs/: weft-design.md
mercury/include/: mercury_capi.h
mercury/native/: README.md  mercury_dwt.h
mercury/native/transform/: dwt_kernels.h  hwy_dwt.cpp  mercury_dwt_bridge.cpp
mercury/src/: capi.rs  ffi_dwt.rs  lib.rs
mercury/src/codec/: mod.rs  params.rs  tile_geom.rs
mercury/src/decode/: graph.rs  mod.rs  plan.rs  read_at.rs  stripe_decoder.rs
mercury/src/dwt/: hlift.rs  hsyn.rs  level_builder.rs  mod.rs  synthesis.rs  vlift.rs
mercury/src/weft/: mod.rs  node.rs  ring.rs  rt.rs
src/examples/: CMakeLists.txt  grk_examples_config.h.cmake.in
src/examples/codec/: CMakeLists.txt  codec_decompress_from_file_to_tiff.cpp  decompress_from_file_to_tiff.cpp  grk_example_codec_decompress.cpp
src/lib/codec/: CMakeLists.txt  grok_codec.cpp  grok_codec.h  libgrokj2kcodec.pc.cmake.in
src/lib/core/: CMakeLists.txt  grk_config.h.cmake.in  grk_config_private.h.cmake.in  grk_includes.h  grok.cpp  grok.h  grok_private.h  libgrokj2k.pc.cmake.in  mercury_fastpath.cpp  mercury_fastpath.h
src/lib/jp2/: CMakeLists.txt  RateControl.h  RateInfo.cpp  T2.cpp  TileBuffer.cpp  TileBuffer.h  TileComponent.cpp  TileComponent.h  TileComponentBuffer.h  TileProcessor.cpp  TileProcessor.h  grk_config.h.cmake.in  grk_config_private.h.cmake.in  grk_includes.h  grok.cpp  grok.h  grok_exceptions.h  grok_includes.h  image.cpp  image.h  invert.cpp  j2k.cpp  j2k.h  j2k_dump.cpp  j2k_static.h  libgrokj2k.pc.cmake.in  pi.cpp  pi.h
src/lib/openjp2/: Barrier.h  BitIO.cpp  BitIO.h  BlockingQueue.h  BufferedStream.h  CMakeLists.txt  CPUArch.cpp  CPUArch.h  EncodedTileData.cpp  EncodedTileData.h  GrokStream.cpp  GrokStream.h  IBitIO.h  IBufferedStream.h  IGrokStream.h  RateControl.cpp  RateControl.h  RateInfo.cpp  RateInfo.h  T1.h  T1Decoder.cpp  T1Decoder.h  T1Encoder.cpp  T1Encoder.h  T1Factory.cpp  T1Factory.h  T1Interface.h  T2.cpp  T2.h  ThreadPool.h  ThreadPool.hpp  Tier1.cpp  Tier1.h  TileBuffer.cpp  TileBuffer.h  TileProcessor.cpp  TileProcessor.h  Wavelet.h  WaveletForward.h  WaveletInverse.h  (+125 more)
src/lib/openjp2_plugin/: CMakeLists.txt  Plugin.cpp  Plugin.h
src/lib/plugin/: CMakeLists.txt  Plugin.cpp
tests/: CMakeLists.txt  GrkCompareDumpFiles.cpp  GrkCompareDumpFiles.h  GrkCompareRawFiles.cpp  GrkCompareRawFiles.h  GrkJP2MetadataTest.cpp  GrkJP2MetadataTest.h  GrkLRUCacheTest.cpp  GrkLRUCacheTest.h  GrkMJ2Test.cpp  GrkMJ2Test.h  GrkMessengerTest.cpp  GrkMessengerTest.h  GrkMultiRegionDecompress.cpp  GrkMultiRegionDecompress.h  GrkRandomTileAccess.cpp  GrkRandomTileAccess.h  GrkRescaleTest.cpp  compare_dump_files.c  compare_dump_files.cpp  compare_images.c  compare_images.cpp  compare_raw_files.cpp  grk_jp2_metadata_test.cpp  grk_lru_cache_test.cpp  grk_messenger_loopback.cpp  grk_messenger_test.cpp  grk_mj2_test.cpp  grk_shm_batch_compress.cpp  grk_shm_batch_decompress.cpp  j2k_multi_region_decompress.cpp  j2k_random_tile_access.c  j2k_random_tile_access.cpp  pdf2jp2.cpp  ppm2rgb3.c  ppm2rgb3.cpp  test_common.h  test_tile_decoder.c  test_tile_decoder.cpp  test_tile_encoder.c  (+1 more)
tests/conformance/: CMakeLists.txt
tests/csharp/: GrokCoreTests.cs  GrokCoreTests.csproj
tests/fuzzers/: GNUmakefile  README.TXT  README.md  build_google_oss_fuzzers.sh  build_seed_corpus.sh  failing_fuzzers.txt  fuzzingengine.c  grk_compress_fuzzer.cpp  grk_decompress_fuzzer.cpp
tests/java/: run_tests.cmake
tests/nonregression/: CMakeLists.txt  blacklist_jpeg2000.txt  blacklist_jpeg2000_tmp.txt  checkmd5refs.cmake  collect_ci_md5refs.py  md5blacklist-macos-dynamic.txt  md5blacklist-macos-static.txt  md5refs-macos-dynamic.txt  md5refs-macos-static.txt  md5refs-ubuntu-static.txt  md5refs-windows-dynamic.txt  md5refs-windows-static.txt  md5refs.txt  test_suite.ctest.in  update_md5refs.py
tests/performance/: bench.py  compare_perfs.py  perf_test.py
tests/profiling/: filter_massif_output.py
tests/python/: CMakeLists.txt  conftest.py  region_verify.py  test_async_decompress.py  test_codec.py  test_codec_bindings.py  test_core.py  test_errors.py  test_gpu.py  test_jp2_metadata.py  test_multi_decompress.py  test_region_decode_lossy_rpcl.py  test_rescale.py  test_roundtrip.py  test_s3.py  test_single_threaded.py  test_stdio.py
tests/unit/: CMakeLists.txt  testempty0.cpp  testempty1.c  testempty1.cpp  testempty2.c  testempty2.cpp
(+1172 files in other folders)
